# ITMO-Programming-2sem

./: README.md
lab1/: figures.h  lab1.cpp  main.cpp  polynom.h
lab2/: CMakeLists.txt  VariadicTable.h  currency.h  main.cpp  parse.h  pretty_table.h
lab3/: CMakeLists.txt  algo.cpp  algo.h  main.cpp  rational.h  ring_buffer.h
lab4/: CMakeLists.txt  Cube.h  GenAlgo.h  Pochmann.h  Visual.h  cube.in  main.cpp
lab5/: ArenaFixedPool.h  CMakeLists.txt  SimpleFixedPool.h  SpeedTest.h  main.cpp
lab6/: CMakeLists.txt  Constexpr.h  gTests.h  main.cpp
